# AlphaDou-v2

./: .gitignore  DESIGN.md  README.md  pyproject.toml
configs/: default.yaml
configs/env/: doudizhu.yaml
configs/model/: resnet.yaml  resnet_base.yaml  transformer.yaml  transformer_base.yaml
configs/training/: dmc.yaml  ppo.yaml
core/: __init__.py  actions.py  cards.py  rules.py  state.py
env/: __init__.py  doudizhu_env.py  observation.py  reward.py  wrappers.py
evaluation/: __init__.py  arena.py  elo.py  evaluator.py  metrics.py
models/: __init__.py  config.py  doudizhu_model.py  registry.py
models/backbone/: __init__.py  resnet.py  transformer.py
models/heads/: __init__.py  bid.py  policy.py  value.py
scripts/: auto_restart_train.sh  cloud_train.sh  evaluate.py  play.py  train.py
tests/integration/: test_env.py  test_model_env.py
tests/unit/: test_action_encoding.py  test_actions.py  test_cards.py  test_evaluation.py  test_models.py  test_rules.py  test_state.py  test_training.py
training/: __init__.py  buffer.py  config.py  learner.py  rollout.py  trainer.py
